test/int.c
// test unsigned int
int main() {
    int a = 0;
    int b = 234;
    int c = 10000;
    int d = 0123;
    int e = 09;     // error
    int f = 0x3F;
    int g = 0x1G;   // error
}